# atmacup18

./: .gitignore  hello.py  pyproject.toml
src/: baseline.ipynb  conv_tiny.ipynb  effnetb0.ipynb  effnetb0_2.ipynb  resnet_2.ipynb  swin_small.ipynb  swin_small_2.ipynb  swin_small_3_norm.ipynb  swin_tiny.ipynb  train_gbdt.ipynb  unzip.py  やってないswin_tiny_2.ipynb
