[project]
name = "atmacup18"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.4.21",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "nbconvert>=7.16.4",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
    "warmup-scheduler>=0.3",
]
